# HoloGram

./: .env.example  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT_CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX-卡点修复方案.md  FIX-卡点修复方案v2.md  FRONTEND_AUDIT_CHECKLIST.md  GRAPH_ALGORITHMS.md  HANDOFF.md  INCREMENTAL-GRAPH-UPDATE.md  LICENSE  LOG_SYSTEM_PLAN.md  PONYTAIL-DEBT.md  PROJECT.md  README.md  SECURITY.md  SPEC_AGENT_PANEL_UPGRADE.md  SPEC_PERMISSION_UNIFY.md  STARGRAPH_SPEC.md  TEST_SPEC.md  TODO.md  V4_CONSTRUCTION_PLAN.md  gen_files_graph.py  hologram.constraints.yaml  hologram_graph_files.json  pill-demo.html  prototype-permission.html  pyproject.toml  toolbar-demo.html
--help/: hologram_graph.json
.cursor/: mcp.json
.cursor/rules/: hologram-engine.mdc  hologram-frontend.mdc  hologram-mcp-tools.mdc  hologram-overview.mdc  hologram-tauri.mdc
.github/workflows/: ci.yml  release.yml
.hologram/docs/: agent-dataflow-tracing-design.md
assets/: icon-design.html  ui-prototype-v2.html  ui-prototype.html
docs/: DATA_FLOW_ARCHITECTURE.md
docs/nested/deep/: test.txt
docs_archive/: COMPARISON_REPORT.md  SPEC.md  SPEC_V2.md  SPEC_V3.md  SPEC_V4.md  TODO.md  debug_400.json
engine/: Cargo.toml  build.rs  run_tests.bat
engine/fixtures/test_project/: db.py  helper.js  main.py  worker.py
engine/queries/: bash_dataflow.scm  c_dataflow.scm  csharp_dataflow.scm  dart_dataflow.scm  elixir_dataflow.scm  go_dataflow.scm  java_dataflow.scm  js_ts_dataflow.scm  lua_dataflow.scm  php_dataflow.scm  python_dataflow.scm  r_dataflow.scm  ruby_dataflow.scm  rust_dataflow.scm  scala_dataflow.scm  swift_dataflow.scm  zig_dataflow.scm
engine/src/: engine.rs  lib.rs  logging.rs  main.rs  mcp.rs  path_utils.rs  stress.rs  timeline.rs  watcher.rs
engine/src/adapter/: c_lsp.rs  cs_lsp.rs  go_lsp.rs  grammar_loader.rs  java_lsp.rs  kotlin_lsp.rs  mod.rs  php_lsp.rs  python.rs  python_lsp.rs  registry.rs  scope.rs  traits.rs  tree_sitter.rs  ts_lsp.rs  type_registry.rs  types.rs  typescript.rs
engine/src/analysis/: blindspots.rs  coupling.rs  coupling_report.rs  cycles.rs  dataflow.rs  dataflow_engine.rs  dataflow_synthesis.rs  dynamic_dispatch.rs  explore.rs  fragility.rs  framework_routes.rs  graph_stats.rs  mod.rs  policy_check.rs  threading.rs
engine/src/community/: louvain.rs  mod.rs
engine/src/graph/: edge.rs  graph.rs  merge.rs  mod.rs  node.rs  query.rs  resolver.rs
engine/src/pipeline/: discovery.rs  mod.rs  parser.rs  runner.rs
engine/src/routing/: constraints.rs  mod.rs  patterns.rs  preflight.rs  signals.rs  summary.rs
engine/src/serialization/: compat_json.rs  mod.rs
engine/src/storage/: incremental.rs  memory.rs  migration.rs  mod.rs  sqlite.rs  store.rs  string_arena.rs
engine/src/tools/: mod.rs
grammars/: build.ps1  grammars.txt
preflight/: hologram_graph.json
prototype/: layout-prototype.html
scripts/: gen_cleanup_b64.py  prebuild.sh  setup-embedded-python.sh
specs/: sandbox-permission-spec.md
src-tauri/: .gitignore  Cargo.toml  prebuild.bat  tauri.conf.json
src-tauri/src/: agent_isolation.rs  audit.rs  credential.rs  engine_client.rs  lib.rs  logging.rs  lsp_manager.rs  main.rs  mcp_manager.rs  os_sandbox.rs  pty_manager.rs  sandbox.rs  unity_manager.rs  utils.rs  workspace.rs
src-tauri/src/commands/: dataflow.rs  hologram.rs  mod.rs  tools.rs  workspace.rs
src-tauri/src/permissions/: bash.rs  filesystem.rs  git.rs  mod.rs  rule.rs  safety.rs  web.rs
src-tauri/src/tools/: mod.rs
src-tauri/tests/: hologram_dispatch_test.rs
src-tauri/wix/: cleanup.wxs
src-ui/: index.html  package-lock.json  package.json  test-agent.ts  test-once.ts  vite.config.ts  vitest.config.ts
src-ui/src/: bridge.ts  i18n.ts  main.ts  mock-data.ts  settings.ts  vite-env.d.ts  workspace.ts
src-ui/src/agent/: agent.ts  hooks.ts  logger.ts  memory.ts  permission.ts  task.ts  tool.ts
src-ui/src/provider/: anthropic.ts  openai.ts  types.ts
src-ui/src/ui/: agent-lens.ts  agent-visualizer.ts  app-shell.ts  chat.ts  check.ts  conflict.ts  constraints.ts  context-menu.ts  dataflow-panel.ts  debug.ts  events.ts  file-translator.css  file-translator.ts  file-tree.ts  file-viewer.ts  git-panel.ts  gpu-layout.ts  graph-interaction.ts  graph.ts  hotspots.ts  icons.ts  layout.worker.ts  lsp-client.ts  settings-panel.ts  terminal.ts  timeline.ts
src-ui/tests/: agent-exec.test.ts  buildSystemPrompt.test.ts  chat-session.test.ts  hashProjectPath.test.ts  hologram-dispatch.test.ts  logger-dataflow.test.ts
src_python/: __main__.py  cli.py  mcp_server.py  timeline.py  watcher.py
src_python/adapters/: __init__.py  base.py  python_adapter.py  tree_sitter_adapter.py  tree_sitter_grammars.py  typescript_adapter.py
src_python/analysis/: __init__.py  blindspots.py  coupling.py  dataflow.py  threading.py
src_python/core/: __init__.py  community.py  diff.py  graph.py  merger.py  rename.py
src_python/pipeline/: __init__.py  cache.py  layout.py  runner.py  worker.py
src_python/routing/: constraints.py  patterns.py  preflight.py  signals.py  summary.py
tests/: __init__.py  helpers.py  test_cli.py  test_cli_full.py  test_community.py  test_config_contract.py  test_coverage_gaps.py  test_diff.py  test_e2e.py  test_edge_cases.py  test_entry_point_equivalence.py  test_fill_coverage_gaps.py  test_graph.py  test_integration.py  test_integration_workspace.py  test_layout.py  test_mcp_server.py  test_merger.py  test_pipeline.py  test_preflight.py  test_python_adapter.py  test_registry.py  test_rename.py  test_resource_lifecycle.py  test_serialization_roundtrip.py  test_typescript_adapter.py  test_v2_blindspots.py  test_v2_coupling.py  test_v2_dataflow.py  test_v2_threading.py  test_v2_timeline.py  test_v3_constraints.py  test_v3_patterns.py  test_v3_signals.py  test_v3_summary.py  test_watcher.py
tests/e2e/: run_all.sh  test_multi_workspace.sh
