[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hologram"
version = "0.1.0"
description = "代码全息观测站 — 系统无关的代码库交互式依赖拓扑图生成器"
requires-python = ">=3.10"
authors = [{ name = "Hologram Team" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["code-analysis", "dependency-graph", "topology", "visualization"]

dependencies = [
    "networkx>=3.0",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "msgpack>=1.0",
    "PyYAML>=6.0",
    "tree-sitter>=0.22",
]

[project.optional-dependencies]
full = [
    "hologram",
    "watchdog>=4.0",
]

dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
hologram = "src_python.cli:main"

[tool.setuptools.packages.find]
include = ["src_python*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: 集成测试（需要完整流水线，较慢）",
    "slow: 慢速测试（>5s）",
]
