[package]
name = "hologram-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
rayon = "1.10"
rand = "0.8"
regex = "1"
