# Copyright (c) 2026 Wenbing Jing. MIT License.
# SPDX-License-Identifier: MIT

[package]
name = "hologram-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
streaming-iterator = "0.1"
tree-sitter-language = "0.1"
libloading = "0.8"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
chrono = "0.4"
rayon = "1.10"
rand = "0.8"
regex = "1"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-lua = "0.2"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-dart = "0.2"
tree-sitter-scala = "0.26"
tree-sitter-ocaml = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-r = "1.2"
tree-sitter-nix = "0.3"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1.1"
tree-sitter-elixir = "0.3"
tree-sitter-erlang = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
notify = "6"
mimalloc = "0.1"
