# Copyright (c) 2026 Wenbing Jing. MIT License.
# SPDX-License-Identifier: MIT

[package]
name = "hologram"
version = "0.1.0"
description = "全息观测站"
authors = ["Hologram Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], default-features = false }

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
ureq = "2"
regex = "1"
glob = "0.3"
url = "2"
portable-pty = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
hologram-engine = { path = "../engine" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
